# core

./: LICENSE  README.md  Tidelift.rst  pyproject.toml
docs/: DOCS.md  INDEX.md
docs/primitives/: metadata.md
src/forged/: __init__.py  unsorted.py
src/forged/core/: logged.py
src/forged/ecosystem/: __init__.py  alts.py
src/forged/elements/: __init__.py  natural.py
src/forged/primitives/: metadata.py
